--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>com.jimandlisa.Enforcer</mainClass>
+              <mainClass>com.jimandlisa.enforcer.Enforce</mainClass>
             </manifest>
           </archive>
         </configuration>
