Adding classes to components

--- a/src/test/resources/TestTarget.yaml
+++ b/src/test/resources/TestTarget.yaml
@@ -20,3 +20,8 @@ components:
     packages:
       - com.foo.bar.
       - org.baz
+  - name: My Other Component
+    layer: My First Layer
+    domain: Domain A
+    classes:
+      - com.foo.bar.Baz
