--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,104 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+    <!--
+    <dependency>
+      <groupId>org.apache.bcel</groupId>
+      <artifactId>bcel</artifactId>
+      <version>6.2</version>
+    </dependency>
+    -->
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>application</artifactId>
+      <version>3.1.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-application-3.1.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>bcel</artifactId>
+      <version>6.2</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/bcel-6.2.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>bif</artifactId>
+      <version>4.1.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-bif-4.1.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>base</artifactId>
+      <version>2.2.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-cda-base-2.2.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>core</artifactId>
+      <version>2.2.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-cda-core-2.2.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>file</artifactId>
+      <version>6.1.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-file-6.1.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>logging</artifactId>
+      <version>3.1.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-logging-3.1.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>nls</artifactId>
+      <version>3.1.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-nls-3.1.0.jar</systemPath>
+    </dependency>    
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>odem</artifactId>
+      <version>1.2.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-odem-1.2.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>settings</artifactId>
+      <version>4.1.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-settings-4.1.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>text</artifactId>
+      <version>4.1.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-textx-4.1.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>textx</artifactId>
+      <version>8.1.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-text-8.1.0.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>pf-cda</groupId>
+      <artifactId>utilities</artifactId>
+      <version>6.1.0</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/cda/pf-utilities-6.1.0.jar</systemPath>
+    </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
