--- a/pom.xml
+++ b/pom.xml
@@ -6,80 +6,30 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Architecture Enforcer</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/jimshowalter/architecture-enforcer</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <repositories>
+    <repository>
+      <id>central</id>
+      <url>http://repo1.maven.org/maven2</url>
+    </repository>
+    <repository>
+      <id>pfsw</id>
+      <url>http://programmers-friend.org/maven/repo</url>
+    </repository>     
+  </repositories>
   <dependencies>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>application</artifactId>
-      <version>3.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>bif</artifactId>
-      <version>4.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>base</artifactId>
-      <version>2.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>core</artifactId>
-      <version>2.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>file</artifactId>
-      <version>6.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>logging</artifactId>
-      <version>3.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>nls</artifactId>
-      <version>3.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>odem</artifactId>
-      <version>1.2.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>reflect</artifactId>
-      <version>4.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>settings</artifactId>
-      <version>4.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>text</artifactId>
-      <version>4.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>textx</artifactId>
-      <version>8.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>pf-cda</groupId>
-      <artifactId>utilities</artifactId>
-      <version>6.1.0</version>
-    </dependency>
     <dependency>
       <groupId>org.apache.bcel</groupId>
       <artifactId>bcel</artifactId>
-      <version>6.2</version>
+      <version>6.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.pfsw</groupId>
+      <artifactId>pf-cda-core</artifactId>
+      <version>2.3.0</version>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
