--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.10.19</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -129,7 +135,7 @@
             <configuration>
               <excludes>
                 <exclude>**/Main.class</exclude>
-                <exclude>org/pfsw/*</exclude>  <!-- TODO: These should be ignored but aren't. -->
+                <exclude>org/pfsw/*</exclude>
               </excludes>
             </configuration>
           </execution>
